cluster/core/rook-ceph/dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: system-rook-ceph
  labels:
    app.kubernetes.io/instance: rook-ceph-mgr-dashboard
    app.kubernetes.io/name: rook-ceph-mgr-dashboard
spec:
  ingressClassName: traefik
  rules:
    - host: "rook.${DOMAIN_1}"
      http:
        paths:
          - backend:
              service:
                name: rook-ceph-mgr-dashboard
                port:
                  name: http-dashboard
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "rook.${DOMAIN_1}"
      secretName: tls.rook-ceph-mgr-dashboard
